# Exchange

./: README.md  io.github.shonebinu.Exchange.json  meson.build
data/: io.github.shonebinu.Exchange.desktop.in  io.github.shonebinu.Exchange.gschema.xml  io.github.shonebinu.Exchange.metainfo.xml.in  io.github.shonebinu.Exchange.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: compiler.py  exchange.gresource.xml  exchange.in  logs-dialog.blp  logs_dialog.py  main.py  meson.build  window.blp  window.py
